# pg-ha

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.build.yml  docker-compose.yml  test-config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
crates/pg-ha-api/: Cargo.toml
crates/pg-ha-api/src/: lib.rs  routes.rs  state.rs
crates/pg-ha-core/: Cargo.toml
crates/pg-ha-core/src/: bootstrap.rs  callbacks.rs  cascading.rs  cluster.rs  commands.rs  config.rs  dcs.rs  dynamic_config.rs  error.rs  failsafe.rs  history.rs  lib.rs  postgresql.rs  slots.rs  standby_cluster.rs  sync.rs  watchdog.rs
crates/pg-ha-core/src/ha/: commands.rs  election.rs  follow.rs  helpers.rs  mod.rs
crates/pg-ha-ctl/: Cargo.toml
crates/pg-ha-ctl/src/: main.rs
crates/pg-ha-dcs/: Cargo.toml
crates/pg-ha-dcs/src/: lib.rs  network.rs  raft_dcs.rs  raft_server.rs  state_machine.rs  store.rs  wal.rs
crates/pg-ha-proxy/: Cargo.toml
crates/pg-ha-proxy/src/: lib.rs  proxy.rs
docker/: Dockerfile  entrypoint.sh
docker/tls/: ca.crt  ca.key  client.crt  client.key  server.crt  server.key
docs/: TODO.md  deployment-guide.md  operations-guide.md  pg-ha-architecture.md
src/: main.rs
tests/e2e/: lib.sh  quick_test.sh  run_tests.sh  test_bootstrap.sh  test_consistency.sh  test_db_connections.sh  test_dynamic_config.sh  test_failover.sh  test_ha_full.sh  test_metrics.sh  test_network_partition.sh  test_pause_mode.sh  test_rejoin.sh  test_switchover.sh
