[package]
name = "pg-ha"
version = "0.1.0"
edition = "2024"
description = "PostgreSQL High Availability with built-in Raft consensus and load balancing"
license = "Apache-2.0"
readme = "README.md"

[workspace]
members = [
    ".",
    "crates/pg-ha-core",
    "crates/pg-ha-dcs",
    "crates/pg-ha-proxy",
    "crates/pg-ha-api",
    "crates/pg-ha-ctl",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
openraft = { version = "0.9", features = ["serde"] }
pingora-core = "0.8"
pingora-proxy = "0.8"
pingora-load-balancing = "0.8"
axum = "0.8"
tokio-postgres = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
futures-util = "0.3"

[dependencies]
pg-ha-core = { path = "crates/pg-ha-core" }
pg-ha-dcs = { path = "crates/pg-ha-dcs" }
pg-ha-proxy = { path = "crates/pg-ha-proxy" }
pg-ha-api = { path = "crates/pg-ha-api" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }

[dev-dependencies]
proptest = "1"
tokio = { workspace = true, features = ["test-util"] }
